--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.0",
+    "idb-keyval": "^6.2.0",
     "install": "^0.13.0",
     "npm": "^8.14.0",
     "react": "^18.2.0",
