--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.13",
+    "temporal-polyfill": "^0.2.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
@@ -70,6 +71,8 @@
     "sass": "^1.53.0"
   },
   "jest": {
-    "transformIgnorePatterns": ["/node_modules/(?!d3|d3-array|d3-shape|internmap)"] 
+    "transformIgnorePatterns": [
+      "/node_modules/(?!d3|d3-array|d3-shape|internmap)"
+    ]
   }
 }
